<resources>
    <string name="app_name">ExerciseMenu</string>
    <string name="labelapp">LOGIN USER</string>
    <string name="Labelhitung">Menu Hitung Bangun Datar</string>
    <string name="persegi">Persegi</string>
    <string name="segitiga">Segitiga</string>
    <string name="Persegipjg">Persegi Panjang</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="trapesium">Trapesium</string>
    <string name="jari">Masukka Jari jari</string>
    <string name="sisi">Masukkan sisi</string>
    <string name="panjang">Masukkan Panjang</string>
    <string name="lebar">Masukkan Lebar</string>
    <string name="alas">Masukkan Panjang Alas</string>
    <string name="tinggi">Masukkan Tinggi</string>
    <string name="miring">masukkan sisi miring</string>
    <string name="dc">Masukkan Panjang D C</string>
    <string name="ab">Masukkan Panjang A B</string>
    <string name="un">Username</string>
    <string name="hitungluas">Hitung Luas</string>
    <string name="hitungkeliling">Hitung Keliling</string>
    <string name="ps">Password</string>
    <string name="btn">Sign-In</string>
    <string name="hsl">Ini Tampilan Hasil</string>
    <string name="Masukkan_Password">Masukkan Password</string>
    <string name="Masukkan_Username">Masukkan Username</string>
</resources>
